--- a/u/ul/ult/ultimatecoupons.com.html
+++ b/u/ul/ult/ultimatecoupons.com.html
@@ -1,117 +1,54 @@
-<!--The following is the downloaded HTML source of the ultimatecoupons.com privacy policy that was archived on 2002-10-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20021014022820id_/http%3A//www.ultimatecoupons.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ultimatecoupons.com privacy policy that was archived on 2010-09-13.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100913050639id_/http%3A//www.internetbrands.com/ib/privacy/travel%3Fsite%3Dwww.ultimatecoupons.com) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd"><html><head>
-<title>Privacy Statement and Disclaimer</title>
-
-<meta name="description" content="UltimateCoupons.com's Privacy Policy and Disclaimer">
-
-<meta name="keywords" content="Privacy Policy, Disclaimer, coupons, discounts, save money, bargains, best prices, free, online shopping, web stores, buy, saving money, purchase, lowest price, books, videos, movies, DVD, music, CDs, magazines, shopping online, auctions, office supplies, vitamins, nutrition, shop, discount, health, lowest prices, electronics, toys, video games, coupon, UltimateCoupons.com">
-
+<html><head>
+<title>Site Privacy Policy</title>
+<link rel="stylesheet" href="http://cdc.ibsrv.net/includes/common.css" type="text/css">
+<link rel="stylesheet" href="http://cdc.ibsrv.net/includes/common_layout.css" type="text/css">
+<script language="JavaScript" src="/includes/utils.js"></script>
 </head>
-
-<body bgcolor="#FFFFFF" link="#1822CD" alink="#09B812" vlink="#5918BB">
-
-<center>
-<map name="map_sub">
-<area shape="rect" coords="0,0,59,27" href="/" alt="Homepage">
-<area shape="rect" coords="59,0,132,27" href="/coupons/" alt="Coupon Directory">
-<area shape="rect" coords="132,0,195,27" href="/deal_of_the_day.htm" alt="Deals of the Day">
-<area shape="rect" coords="195,0,271,27" href="/clearance.htm" alt="Clearance &amp; Specials">
-<area shape="rect" coords="271,0,358,27" href="/comparison_shopping.htm" alt="Comparison Shopping">
-<area shape="rect" coords="358,0,433,27" href="/cash_back.htm" alt="Cash Back Shopping">
-<area shape="rect" coords="433,0,493,27" href="/rebates.htm" alt="Mail-In Rebates">
-<area shape="rect" coords="493,0,548,27" href="/buying_guides.htm" alt="Buying Guides">
-<area shape="rect" coords="548,0,610,27" href="/product_reviews.htm" alt="Product Reviews">
-<area shape="rect" coords="21,27,129,51" href="/coupons/offline_coupons.htm" alt="Grocery and Local Coupons">
-<area shape="rect" coords="129,27,226,51" href="/guide/" alt="Online Shopping Guide">
-<area shape="rect" coords="226,27,330,51" href="/useful_sites.htm" alt="Cool and Useful Shopping Sites">
-<area shape="rect" coords="330,27,381,51" href="http://pub95.ezboard.com/bultimatecoupons" alt="UltimateCoupons.com Message Board" target="WINDOW1">
-<area shape="rect" coords="381,27,426,51" href="/free/" alt="Free Stuff">
-<area shape="rect" coords="426,27,523,51" href="/newsletter.htm" alt="Coupon and Deal Newsletter">
-<area shape="rect" coords="523,27,590,51" href="/about.htm" alt="About this Site">
-</map>
-<a href="/"><img src="/graphics/ultimate_coupons.gif" width="610" height="90" border="0" alt="UltimateCoupons.com"></a><br>
-<img src="/graphics/tabs_sub.gif" width="610" height="53" border="0" alt="Ultimate Coupons Navigation Tabs" usemap="#map_sub">
-</center>
-
-<p></p><center><table border="0" cellspacing="0" cellpadding="0" width="610">
-
-<tbody><tr><td align="left">
-<p align="center">
-<font size="+2" face="verdana,arial,helvetica"><b>Privacy Policy and Disclaimer</b></font><br><font size="+1" face="verdana,arial,helvetica">for UltimateCoupons.com</font></p>
-
-
-<p><font size="+1" color="#1822CD"><b>Privacy Policy</b></font></p>
-
-<p><font size="-1" face="verdana,arial,helvetica">UltimateCoupons.com, LLC. respects your privacy. We don't collect any information from our visitors except for your e-mail address if you choose to sign up for our free newsletter and your name and e-mail address if you enter one of our contests. (If you win one of our contests we'll need to ask you for additional information.). And don't worry -- if you do sign up for our newsletter or enter our contests, you can be sure we will NEVER sell or rent your name or e-mail address to anyone else.</font></p>
-
-<p><font size="-1" face="verdana,arial,helvetica">UltimateCoupons.com may also look at the IP address and browser type of people signing up for our newsletter, entering our contests, or sending us comments, questions or suggestions through our fill-in forms. This is to prevent fraud and abuse.</font></p>
-
-<p><font size="-1" face="verdana,arial,helvetica">Also, please be aware that third party links on our site, such as the advertising banners and our affiliate program links, often track which of their ads or links you view or click on.</font></p>
-
-<p><font size="-1" face="verdana,arial,helvetica">Cookies: UltimateCoupons makes limited use of new windows which open automatically upon visiting certain pages. Cookies are used so the new window opens only once per person even if the page that opened the new window is reloaded.</font></p>
-
-<p><br></p>
-
-<p><font size="+1" color="#1822CD"><b>Disclaimer</b></font></p>
-
-<p><font size="-1" face="verdana,arial,helvetica">The information provided on UltimateCoupons.com is for informational and entertainment purposes only. Before making any decisions based on anything within UltimateCoupons.com, please verify the information yourself. UltimateCoupons.com disclaims all liability related to the use of this site. The coupons, discounts, offers, and promotions listed or linked to on UltimateCoupons.com may change or become invalid at any time. We do our best to keep this information current and remove invalid offers, but since we are usually not notified about the changes, there may be a delay before we can correct this information. UltimateCoupons.com links to many, many other Websites and is not responsible for the content of those sites. UltimateCoupons.com does not sell anything. If you have a problem with an online store that we link to, please contact that store. </font></p>
+<body leftmargin="0" topmargin="0">
+  <table width="100%" border="0" cellpadding="0" cellspacing="0">
+    <tbody><tr> 
+      <td height="40" width="75%"><img src="http://cdc.ibsrv.net/common/ib_logo.gif" width="73" height="26" vspace="0" hspace="5" border="0"></td>
+      <td height="40" width="25%"> 
+        <script language="JavaScript">changeBrowser();</script>
+      </td>
+    </tr>
+  </tbody></table>
+<!-- Heading -->
+<div style="position:relative;margin:15px;margin-top:0px;"> 
+  <p class="px14 bold blue">www.ultimatecoupons.com ("Site")</p>
+  <p class="px14 bold">Privacy Statement</p>
+  <p>We are committed to safeguarding your privacy online. This privacy policy applies to your information that we collect and receive; it does not apply to practices of businesses that we do not own or control or people we do not employ. At no time will we sell your information or release your personally-identifiable data without your permission. You can visit this Site without revealing who you are or providing any personal information about yourself.</p>
+  <p>By using this Site, you agree to the terms of this privacy policy. Please read the following policy to understand how your personal information will be treated as you use our services. The following discloses our information gathering and dissemination practices.</p>
+  <p>This Site contains links to other sites. These include links to resources in related topics and third-party sites that offer other related products. If you visit another website through a link on our site, please consult the privacy policy of the website you are visiting. We are not responsible for the privacy practices or the content of other websites that you may visit.</p>
+  <p class="px14 bold">Browsing the Site</p>
+  <p>If you browse through the Site without entering any personal data, we will gather and store certain information about your visit. This information does not identify you personally and cannot be linked back to you unless you decide at some point to identify yourself. If you are only browsing, we collect the following information: IP address, the type of browser and operating system used to access our site, the date and time you access our site, the pages you visit (click-through), and if you linked to our website from another website, the address of that website as well as additional information related to your visit. We use your IP address to help diagnose problems with our server, and to administer the Site.</p> 
+  <p class="px14 bold">Information Collected</p>
+  <p>We collect the email addresses of consumers who communicate with us or through our authorized vendors via email.</p> 
+  <p>Any information provided by consumers becomes our property once received by us and may be used and disclosed as permitted in this Policy.</p>
+  <p>We may share your personal information with our affiliated companies in order to identify products or services in which you may have interest, to improve our user experience and generally to engage in market research and for other internal business purposes. We may also aggregate your personal information with others' information and prepare reports on site usage, purchase history or other factors for sale or distribution to others. Those reports are aggregated and include no personally identifying information. Finally, we may use your personal information to send you email or postal communications regarding products or services offered by us or by third parties with whom we have relationships in which we think you may be interested. We do not share, sell, trade or rent your personal information to third parties for unknown reasons. You may at any time choose not to receive promotional emails from us by contacting us at <a href="mailto:information@internetbrands.com">information@internetbrands.com</a>. Notwithstanding the foregoing, we may continue to contact you for the purpose of communicating information relating to this Site, as well as to facilitate, complete, or confirm any transaction that you may enter into or responding to your inquiry or request.</p>
+<p>If you prefer for us not to provide your name and email or postal address to third parties for direct marketing purposes, please contact us at <a href="mailto:information@internetbrands.com">information@internetbrands.com</a>.</p>
+  <p class="px14 bold">Use of Forums</p>
+  <p>If you choose to transmit, submit or post information through the Site's chat rooms, bulletin boards or other forums (the "Forums"), we will collect that information you provide. We retain this information as necessary to resolve disputes, provide customer support and troubleshoot problems as permitted by law and pursuant to our Terms of Use.</p>
+  <p class="px14 bold">Cookies</p>
+  <p>We may place "cookies" on your personal computer. "Cookies" are small identifiers sent from a web server and stored on your computer's hard drive, similar to a license plate, that help us to recognize you if you visit our website again. Also, our site uses cookies to track how you found our site. Cookies are not designed to be used to get data from your hard drive, your e-mail or any other personal data about you. To protect your privacy, we do not use cookies to store or transmit any personal information about you on the Internet. You can reject cookies by changing your browser settings. Please note, however, that if you reject our cookies, it is possible that some web pages may not properly load, your access to certain information might be denied or you might have to enter information about yourself more than once.</p>
+  <p class="px14 bold">Security</p>
+  <p>This site has reasonable security measures in place to protect the loss, misuse and alteration of the information under our control.</p>
+  <p class="px14 bold">Third Party Advertising </p>
+  <p>We use third-party advertising companies to serve ads when you visit our website. These companies use non-personally identifiable information regarding your visit to this website and other sites, such as the user IP address, pages viewed, date and time of your visit, and number of times you have viewed an ad (but not your name, address, or other personal information), to serve ads to you on this site and other sites that may be of interest to you. In the course of serving advertisements to this site, our third-party advertiser may place or recognize a unique cookie on your browser.</p>
+  <p>Specifically, Google, as a third party vendor, uses cookies to serve ads on this website.  Google´s use of the DART cookie enables it to serve ads to you based on your visit to this website and other websites on the Internet.  You may opt out of the use of the DART cookies by visiting the Google ad and content network <a href="http://www.google.com/privacy_ads.html" target="_new">privacy policy</a>.</p>
+  <p>In addition, we use clear GIFs or pixel tags to help manage our online advertising. These clear GIFs enable our ad serving company to recognize a browser's cookie when a browser visits this site. This allows us to learn which banner ads bring users to our website. The information we collect and share through this technology is not personally identifiable.</p>
+  <p>To learn more about these practices and your choices about not having this information used by these companies please <a href="http://www.networkadvertising.org/consumer/opt_out.asp" target="_new">click here</a>.</p>
+  <p class="px14 bold">Contacting the Web Site</p>
+  <p>Please be aware that we may change our Privacy Policy from time to time. If we do, we will update this Privacy Policy at our website, so be sure to check back here frequently.</p>
+  <p>If you have any questions about this Privacy Policy, the practices of this site, or your dealings with this Web site, you can contact: <a href="mailto:information@internetbrands.com">information@internetbrands.com</a>.</p>
+  
+  <p>www.ultimatecoupons.com</p>
+  <p>March 24, 2009</p>
+</div>
 
 
-<p>
-
-</p><center><table border="0" cellspacing="0" cellpadding="5" width="610">
-<tbody><tr><td colspan="2"><img src="/graphics/yellowline.gif" width="610" height="2"></td></tr>
-<tr>
-
-<td align="left" valign="bottom" width="40%"><form method="GET" action="http://search.atomz.com/search/"><input type="hidden" name="sp-a" value="sp10018fc9"><font size="-1" face="verdana,arial,helvetica"><b>SEARCH:</b></font> <input size="10" name="sp-q"><input type="image" src="/graphics/go_w.gif" width="34" height="20" border="0" alt="Type what you're looking for and click here to search"></form></td>
-
-<td align="right" valign="bottom" width="60%"><form action="http://lb.bcentral.com/ex/manage/subscriberprefs.aspx" method="POST">
-<font size="-1" face="verdana,arial,helvetica"><b>Subscribe to our <a href="/newsletter.htm"> Newsletter</a>:</b> <input type="TEXT" name="email" value="Enter E-mail" onfocus="if(this.value=='Enter E-mail')this.value='';" size="10"><input type="HIDDEN" name="customerid" value="23186"><input type="image" src="/graphics/go_w.gif" width="34" height="20" border="0" alt="Enter your e-mail address and click here to subscribe"></font></form>
-</td>
-
-</tr>
-<tr><td colspan="2"><img src="/graphics/yellowline.gif" width="610" height="2"></td></tr>
-
-</tbody></table></center>
-
-<p><font size="-1" face="VERDANA,ARIAL,HELVETICA">
-Questions, comments, or suggestions? You can send us a message <a href="/contact.htm">here</a> or you can fill out our <a href="/feedback.htm">Feedback Form</a>. <b>Members of the media, please click <a href="/press.htm">here</a>.</b> If you'd like to suggest a site to add to UltimateCoupons.com, please click <a href="/listinginfo.htm"> here</a> for information.</font></p><font size="-1" face="VERDANA,ARIAL,HELVETICA">
-<hr size="1">
-
-<center>
-<a href="/">Homepage</a> | 
-<a href="/search.htm">Search</a> | 
-<a href="/coupons/">Coupon Directory</a> | 
-<a href="/deal_of_the_day.htm">Deals of the Day</a> |
-<a href="/clearance.htm">Clearance &amp; Specials</a> | 
-<a href="/comparison_shopping.htm"><nobr>Comparison Shopping</nobr></a> | 
-<a href="/cash_back.htm"><nobr>Cash Back Shopping</nobr></a> | 
-<a href="/rebates.htm"><nobr>Mail-In Rebates</nobr></a> | 
-<a href="/buying_guides.htm"><nobr>Buying Guides</nobr></a> | 
-<a href="/product_reviews.htm"><nobr>Product Reviews</nobr></a> | 
-<a href="/coupons/offline_coupons.htm"><nobr>Grocery and Local Coupons</nobr></a> | 
-<a href="/guide/"><nobr>Online Shopping Guide</nobr></a> | 
-<a href="/useful_sites.htm"><nobr>Cool and Useful Shopping Sites</nobr></a> | 
-<a href="/travel.htm"><nobr>Travel Deals</nobr></a> | 
-<a href="/free/"><nobr>Free Stuff</nobr></a> | 
-<a href="/useful_links.htm"><nobr>Useful Links</nobr></a> | 
-<a href="/newsletter.htm"><nobr>Coupon and Deal Newsletter</nobr></a> | 
-<a href="/press.htm"><nobr>Press</nobr></a> | 
-<a href="/about.htm"><nobr>About This Site</nobr></a>
-</center>
-
-<hr size="1">
-<center>
-         <a href="http://click.linksynergy.com/fs-bin/stat?id=OEu024dtHXs&amp;offerid=13541.10000537&amp;type=4&amp;subid=0"><img alt="0100_037A" border="0" src="http://fp.buy.com/buy_assets/affiliate/01/0100_037A.gif"></a><img border="0" width="1" height="1" src="http://ad.linksynergy.com/fs-bin/show?id=OEu024dtHXs&amp;bids=13541.10000537&amp;type=4&amp;subid=0">
-</center>
-<hr size="1">
-
-<font size="-2" face="Arial">Copyright 1999-2002 UltimateCoupons.com, LLC. All rights reserved. "Your Gateway to Online Savings" is a trademark of UltimateCoupons.com, LLC. Penguin artwork is copyright 2000 UltimateCoupons.com, LLC. No portion of this site may be reproduced without permission. Please read our <a href="/privacy.htm">privacy policy and disclaimer</a>.<p></p></font>
-      </font></td>
-   </tr>
-</tbody></table>
-</center>
-
+<iframe id="iframePrompt" style="position:absolute;width:0;height:0;visibility:hidden;z-index:5000;" src="http://cdc.ibsrv.net/common/blank.htm"></iframe>
 </body></html>
