--- a/x/xt/xth/xthost.info.html
+++ b/x/xt/xth/xthost.info.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the xthost.info privacy policy that was archived on 2010-05-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100514203112id_/http%3A//xthost.info/index.php%3Fl%3Dpp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the xthost.info privacy policy that was archived on 2010-09-13.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100913203237id_/http%3A//xthost.info/index.php%3Fl%3Dpp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>XT Host - Free Webhosting 30MB Webspace, No Ads, Instant Signup</title>
@@ -25,19 +25,7 @@
 <td valign="top" colspan="2" width="633" height="1"><img src="s.gif" width="633" height="1" border="0" alt=""></td>
 <td rowspan="2" valign="top" width="364" height="400"><table cellspacing="0" cellpadding="0" border="0" background="mr.jpg" height="402" width="364"><tbody><tr><td>
 
-<table cellspacing="0" cellpadding="0" border="0"><tbody><tr><td width="1"><img src="s.gif" width="1" height="401" border="0" alt=""></td>
-<td valign="top"><img src="s.gif" width="363" height="1" border="0" alt=""><table cellspacing="0" cellpadding="0" border="0">
-<tbody><tr><td><img src="s.gif" width="87" height="1" border="0" alt=""><img src="s.gif" width="1" height="208" border="0" alt=""></td><td></td></tr>
- <tr><td></td><td><br>
- <form method="post" action="http://www2.xthost.info/?l=ac">
- <span class="noadbriteinline"><table cellspacing="1" border="0" cellpadding="0">
- <tbody><tr><td>create account</td></tr>
- <tr><td><input id="create" type="text" name="username" size="14" value="username" onfocus="this.value=''"></td></tr>
- <tr><td><input id="create" type="submit" value="create"></td></tr>
- </tbody></table></span></form></td></tr>
 
- </tbody></table>
-</td></tr></tbody></table>
 
 </td></tr><tr><td colspan="2"><img src="s.gif" width="364" height="1" border="0" alt=""></td></tr></tbody></table>
 </td><td rowspan="2" width="100%" valign="top"><table cellspacing="0" cellpadding="0" border="0" height="402" width="100%" background="mrl.gif"><tbody><tr><td height="100%" width="100%">&nbsp;</td></tr></tbody></table></td></tr>
@@ -47,15 +35,15 @@
 <tbody><tr><td valign="top"><img src="s.gif" width="40" height="1" border="0" alt="">nav</td><td><img src="s.gif" width="5" height="1" border="0" alt=""></td><td bgcolor="#000000"><img src="s.gif" width="1" height="1" border="0" alt=""></td><td><img src="s.gif" width="5" height="1" border="0" alt=""></td><td align="left">
 <table cellspacing="0" cellpadding="0" border="0">
 <tbody><tr><td><a href="http://xthost.info/">home</a></td></tr>
-<tr><td><a href="index.php?l=n">news</a></td></tr>
-<tr><td><a href="index.php?l=c">create</a></td></tr>
 <tr><td><a href="index.php?l=l">login</a></td></tr>
 <tr><td><a href="tos.html" target="_blank">tos</a></td></tr>
 <tr><td><a href="index.php?l=pp">privacy policy</a></td></tr>
 <tr><td><a href="index.php?l=f">faq</a></td></tr>
 <tr><td><a href="http://dhost.info/forums/">forum</a></td></tr>
 <tr><td><a href="index.php?l=r">report abuse</a></td></tr>
-<tr><td><a href="index.php?l=a">about</a></td></tr></tbody></table>
+<tr><td><a href="index.php?l=a">about</a></td></tr>
+<tr><td>&nbsp;<br> </td></tr>
+<tr><td>&nbsp;<br> </td></tr></tbody></table>
 </td></tr><tr><td colspan="5"><br></td></tr><tr><td></td><td colspan="4" bgcolor="#000000"><img src="s.gif" width="1" height="1" border="0" alt=""></td></tr></tbody></table><img src="s.gif" width="1" height="15" border="0" alt="">
 
 <table cellspacing="0" cellpadding="0" border="0"><tbody><tr><td><img src="s.gif" width="18" height="1" border="0" alt=""></td>
