--- a/g/go/goo/goodkeywords.com.html
+++ b/g/go/goo/goodkeywords.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the goodkeywords.com privacy policy that was archived on 2010-01-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100105062151id_/http%3A//www.softnik.com/icenter/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the goodkeywords.com privacy policy that was archived on 2010-09-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100914003516id_/http%3A//www.softnik.com/icenter/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"><html><head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -7,134 +7,99 @@
     <meta name="description" content="Describes the privacy policy of Softnik Technologies">
     <meta name="keywords" content="">
     <meta name="copyright" content="Copyright © 1999-2010 Softnik Technologies.">
+    <meta name="robots" content="noarchive">
     <meta http-equiv="imagetoolbar" content="no">
     <meta name="verify-v1" content="2eWAy78ZhnLoI8vgXnDpVkP1bZdRvy+am/xqX7na73k=">
-    <link rel="stylesheet" type="text/css" media="screen" href="/styles/2009/fixed/770.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="/styles/2009/fixed/rcorners.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="/_code/css/2009/fixed770.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="/styles/2010/fixed/reset.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="/styles/2010/fixed/text.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="/styles/2010/fixed/960.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="/styles/2010/fixed/rcorners.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="/_code/css/2010/fixed960.css">
     <!--[if IE 6]>
-    <link rel="stylesheet" type="text/css" media="screen" href="/_code/css/2009/ie6.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="/_code/css/2010/ie6.css">
     <![endif]-->
+	
 </head>
 <body>
-<div id="main">
-<div id="wrapper">
-<div id="tophead">
-<a name="top"><img src="/_code/css/2009/tlb.gif" alt="" width="13" height="15" class="corner"></a>
-<div id="sitelogo">
-<a href="/"><img src="/_code/css/2009/sitelogo2.gif" width="181" height="48" alt="Softnik Technologies"></a>
+<div class="wrapper">
+<div class="tophead">
+<p><a name="top"><img src="/_code/css/2010/tlb.gif" alt="" width="13" height="15"></a></p>
 </div>
-<div id="tagline">
-<p><img src="/_code/css/2009/tagline2.gif" width="400" height="60" alt="Business Strategy Software"></p>
-</div> <!-- tagline -->		
-  
-  <div id="navblock">
-  <div id="topnav">
-  <ul>
-    <li><a href="/">Home</a></li> 
-    <li><a href="/products/">Products</a></li>
+
+<div class="box00 black" style="height:135px;">
+<div class="twocolsmall left">
+    <a href="/"><img src="/_code/css/2010/sitelogo2.gif" width="181" height="48" alt="Softnik Technologies - Business Strategy Software"></a>
+</div> <!-- end .twocolsmall -->
+
+<div class="twocolbig">
+	<p><img src="/_code/css/2010/tagline2.gif" width="400" height="60" alt="Business Strategy Software"></p>
+</div> <!-- end .twocolbig -->
+
+<div class="clear">&nbsp;</div>
+
+<div class="twocolwrap center">
+    <ul class="hnav">
+    <li class="right"><a href="/icenter/contact.php">Contact</a></li>
+    <!--<li><a href="/support/">Support</a></li>-->
+    <li><a href="/blog/">Blog</a></li>
     <li><a href="/download/">Downloads</a></li>
-    <li><a href="/blog/">Blog</a></li>      
-    <li><a href="/icenter/contact.php">Contact</a></li>
-  </ul>
-  </div> <!-- topnav -->
-  </div> <!-- navblock -->
+    <li><a href="/products/">Products</a></li>
+    <li class="left"><a href="/">Home</a></li>
+    </ul>
+</div>
 
-</div> <!-- tophead -->
+<div class="clear">&nbsp;</div>
 
-<!-- //////////// Header Ends /////////// -->
+</div> <!-- box00 -->
+<div class="clear">&nbsp;</div>
 
-<div class="left3colwob">
-<div class="grey_background"><b class="bt"><b></b></b>
-<div class="pb"><!--accentbox-->
-<img class="centeredimage" src="/images/logos/10thyear.gif" width="200" height="120" alt="Entering the 10th year!">
+<div class="gap20"></div>
+<div class="twocolsmall right">
+<div class="box04 borderbox lgrey">
+<b class="bt"><b></b></b><div class="pb">
+<img class="centeredimage" src="/shared/images/logos/11years.gif" width="120" height="120" alt="Softnik is Entering the 10th year!">
+</div><b class="bb"><b></b></b>
+</div>
+<div class="clear">&nbsp;</div>
+<div class="gap20"></div>
 
-</div> <!--pb-->
-<b class="bb"><b></b></b>
-</div> <!--grey_background-->
-
-<div class="grey_border"><b class="bt"><b></b></b>
-<div class="pb">
-
+<div class="box04 borderbox lgrey center">
+<b class="bt"><b></b></b><div class="pb">
 <a class="button" href="/icenter/">About us</a>
 <a class="button" href="/blog/">Official Company Blog</a>
 <a class="button" href="/icenter/privacy.php">Privacy Policy</a>
 
-<br>
+<hr>
 
 <a class="button" href="/icenter/terms.php">Terms &amp; Conditions</a>
 <a class="button" href="/icenter/terms.php#software">Software</a>
 <a class="button" href="/icenter/terms.php#disclaimer">Disclaimer</a>
 <a class="button" href="/icenter/terms.php#acknowledgement">Acknowldegements</a>
 
-<br>
+<hr>
 
 <a class="button" href="/icenter/contact.php#contactform">Contact Form</a>
 <a class="button" href="/icenter/contact.php#snailmail">Mailing Address</a>
 
-</div> <!--pb-->
-<b class="bb"><b></b></b>
-</div> <!--grey_border-->
+</div><b class="bb"><b></b></b>
+</div>
+</div>
 
-</div> <!--left3colwob-->
-
-<div class="center3colwob">
-<div class="pc">
-<div class="grey_border"><b class="bt"><b></b></b>
-<div class="pb"><div class="iconstrip">
-<p><img src="/images/icons/48/folder.gif" width="48" height="48" alt=""></p>
-</div> <!--iconstrip-->
-
-<div class="icontext">
-
-
+<div class="twocolbig justify">
 <h1>Privacy Policy</h1>
+
+<hr>
+
 <p>Your privacy is important to us. To better protect your privacy we provide this
 notice explaining our online information practices and the choices you can make
 about the way your information is collected and used.</p>
 
-</div> <!--icontext-->
-
-</div> <!-- pb -->
-<div class="clear"></div>
-<b class="bb"><b></b></b>
-</div> <!--grey_border-->
-
-</div> <!--pc-->
-
-<div class="clear"></div>
-<div class="pc">
-<div class="grey_border"><b class="bt"><b></b></b>
-<div class="pb"><div class="iconstrip">
-<p><img src="/images/icons/48/nobug.gif" width="48" height="48" alt=""></p>
-</div> <!--iconstrip-->
-
-<div class="icontext">
-
-
 <h2>No Spyware / No Adware</h2>
+
 <p>All our software products are free from spyware or adware of any kind.
 Our products will never install any tracking software on your system, 
 or collect personal information about you and your browsing habits.
 Our software does not "spy" on other programs you run or web sites you visit.</p>
-
-</div> <!--icontext-->
-
-</div> <!-- pb -->
-<div class="clear"></div>
-<b class="bb"><b></b></b>
-</div> <!--grey_border-->
-
-</div> <!--pc-->
-
-<div class="clear"></div>
-<div class="pc">
-<div class="grey_border"><b class="bt"><b></b></b>
-<div class="pb"><div class="iconstrip">
-<p><img src="/images/icons/48/newdoc.gif" width="48" height="48" alt=""></p>
-</div> <!--iconstrip-->
-
-<div class="icontext">
 
 <h2>The Information We Collect (through standard web log files)</h2>
 
@@ -149,24 +114,6 @@ of these software require no registration. This means that we will not even ask
 for your email address. You can simply download and use the software with out 
 revealing any thing about yourself. These software will have a 'No registration' 
 message displayed very near to the download link.</p>
-
-</div> <!--icontext-->
-
-</div> <!-- pb -->
-<div class="clear"></div>
-<b class="bb"><b></b></b>
-</div> <!--grey_border-->
-
-</div> <!--pc-->
-
-<div class="clear"></div>
-<div class="pc">
-<div class="grey_border"><b class="bt"><b></b></b>
-<div class="pb"><div class="iconstrip">
-<p><img src="/shared/images/icons/48/contact.gif" width="48" height="48" alt=""></p>
-</div> <!--iconstrip-->
-
-<div class="icontext">
 
 <h2>Personal Information</h2>
 
@@ -193,24 +140,6 @@ support services or shipping purposes when you ask us to send something to you).
 sites, we encourage you to review the privacy policies of these third party
 sites.</p>
 
-</div> <!--icontext-->
-
-</div> <!-- pb -->
-<div class="clear"></div>
-<b class="bb"><b></b></b>
-</div> <!--grey_border-->
-
-</div> <!--pc-->
-
-<div class="clear"></div>
-<div class="pc">
-<div class="grey_border"><b class="bt"><b></b></b>
-<div class="pb"><div class="iconstrip">
-<p><img src="/images/icons/48/lock.gif" width="48" height="48" alt=""></p>
-</div> <!--iconstrip-->
-
-<div class="icontext">
-
 <h2>Security and Quality</h2>
 
 <p>Softnik is committed to taking reasonable steps to protect the individual
@@ -221,24 +150,6 @@ In some programs, you may do this online by following the instructions on
 membership profile pages. You may also update your information by 
 <a href="/icenter/contact.php">contacting us</a> with a description or example 
 of what you wish to change.</p>
-
-</div> <!--icontext-->
-
-</div> <!-- pb -->
-<div class="clear"></div>
-<b class="bb"><b></b></b>
-</div> <!--grey_border-->
-
-</div> <!--pc-->
-
-<div class="clear"></div>
-<div class="pc">
-<div class="grey_border"><b class="bt"><b></b></b>
-<div class="pb"><div class="iconstrip">
-<p><img src="/images/icons/48/fragment.gif" width="48" height="48" alt=""></p>
-</div> <!--iconstrip-->
-
-<div class="icontext">
 
 <h2>Cookies</h2>
 
@@ -253,24 +164,6 @@ remember you when you return to visit, but only Softnik web sites can read that
 information. While using our websites, you may receive cookies from our
 advertisers or sponsors. Softnik does not control such cookies.</p>
 
-</div> <!--icontext-->
-
-</div> <!-- pb -->
-<div class="clear"></div>
-<b class="bb"><b></b></b>
-</div> <!--grey_border-->
-
-</div> <!--pc-->
-
-<div class="clear"></div>
-<div class="pc">
-<div class="grey_border"><b class="bt"><b></b></b>
-<div class="pb"><div class="iconstrip">
-<p><img src="/shared/images/icons/48/group.gif" width="48" height="48" alt=""></p>
-</div> <!--iconstrip-->
-
-<div class="icontext">
-
 <h2>Private membership sites</h2>
 
 <p>Software products that include access to one or more private membership sites
@@ -283,24 +176,6 @@ registration keycode that was supplied to you after purchase. This is applicable
 membership sites and have successfully <b>registered the software</b> on your 
 computer using the registration keycode provided by us.</p>
 
-</div> <!--icontext-->
-
-</div> <!-- pb -->
-<div class="clear"></div>
-<b class="bb"><b></b></b>
-</div> <!--grey_border-->
-
-</div> <!--pc-->
-
-<div class="clear"></div>
-<div class="pc">
-<div class="grey_border"><b class="bt"><b></b></b>
-<div class="pb"><div class="iconstrip">
-<p><img src="/shared/images/icons/48/question_blue.gif" width="48" height="48" alt=""></p>
-</div> <!--iconstrip-->
-
-<div class="icontext">
-
 <h2>Oversight or Questions</h2>
 
 <p>Softnik welcomes comments and questions on this policy. As stated above, we are
@@ -310,22 +185,14 @@ Internet, we may update this policy. All revisions will be posted to this site.
 Please <a href="/icenter/contact.php">contact us</a> if you have any questions regarding our policy.</p>
 
 <p>This policy was last updated on November 18 2007</p>
-</div> <!--icontext-->
+</div>
 
-</div> <!-- pb -->
-<div class="clear"></div>
-<b class="bb"><b></b></b>
-</div> <!--grey_border-->
+<div class="clear">&nbsp;</div>
 
-</div> <!--pc-->
-
-</div> <!--center3colwob-->
-
-<div class="clearstrip10"></div>
 
 <!-- //////////// Footer Starts /////////// -->
 
-<div id="footer">
+<div class="footer">
 <p>Copyright © 1999-2010 Softnik Technologies. All rights reserved. Reproduction without permission prohibited.</p>
 <p>
 <a href="http://www.softnik.com/icenter/terms.php">Terms</a>
@@ -340,16 +207,13 @@ Please <a href="/icenter/contact.php">contact us</a> if you have any questions r
 &nbsp;
 <a href="http://jigsaw.w3.org/css-validator/validator?uri=http://www.softnik.com/icenter/privacy.php">W3C CSS</a>
 &nbsp;
-[Host: www.softnik.com] [Request: 75.101.221.99] [Server: 72.14.181.7]</p>
+[Host: www.softnik.com] [Request: 204.236.226.210] [Server: 72.14.181.7]</p>
 
-<p><a href="http://www.codepunch.com/?uri=http://www.softnik.com/icenter/privacy.php">Powered by CodePunch v0.61</a></p>
+<p><a href="http://www.codepunch.com/?uri=http://www.softnik.com/icenter/privacy.php">Powered by CodePunch v0.70</a></p>
 
-<script src="http://www.softnik.com/_code/java/28790.js" type="text/javascript"></script><noscript><p><img alt="Clicky" src="http://in.getclicky.com/28790-db4.gif"></p></noscript>
+<script src="http://static.getclicky.com/js" type="text/javascript"></script><script type="text/javascript">clicky.init(28790);</script><noscript><p><img alt="Clicky" width="1" height="1" src="http://in.getclicky.com/28790ns.gif"></p></noscript>
 </div> <!-- footer -->
 
 </div> <!-- wrapper -->
-</div> <!-- main -->
-
-
 
 </body></html>
